# dcar_platform

./: .gitignore  CMakeLists.txt
controllers/: CMakeLists.txt
controllers/include/: drive_base.hpp
controllers/src/: drive_base.cpp
drivers/: CMakeLists.txt
drivers/pca9685_driver/: CMakeLists.txt
drivers/pca9685_driver/src/: pca9685_driver.cpp
drivers/wheel_encoder/: CMakeLists.txt
drivers/wheel_encoder/include/wheel_encoder/: tick_delta_tracker.hpp  wheel_encoder.hpp
examples/: CMakeLists.txt  drivebase_example.cpp
launch/: multi_sensor_visualization_launch.py
pca9685_driver/: CMakeLists.txt
pca9685_driver/src/: pca_driver.cpp
src/controllers/: CMakeLists.txt  package.xml
src/controllers/src/: drive_base.cpp
src/mpu9250_driver/: CMakeLists.txt  package.xml
src/mpu9250_driver/include/mpu9250_driver/: mpu9250_driver.hpp
src/mpu9250_driver/src/: mpu9250_driver.cpp  mpu9250_driver_node.cpp
src/my_robot_msgs/: CMakeLists.txt  package.xml
src/my_robot_msgs/msg/: RawImu.msg
src/pca9685_driver/: CMakeLists.txt  package.xml
src/pca9685_driver/include/pca9685_driver/: pca9685_driver.hpp
src/pi_camera_driver/: CMakeLists.txt  package.xml
src/pi_camera_driver/include/pi_camera_driver/: camera_node.hpp
src/pi_camera_driver/launch/: camera_launch.py
src/pi_camera_driver/src/: camera_node.cpp
src/wheel_encoder/: CMakeLists.txt  package.xml
src/wheel_encoder/src/: wheel_encoder.cpp
utils/: check_camera.py  check_imu.py  install_dependencies.sh  install_libcamera.sh  install_ros2_foxy_20_04_aarch64.sh  install_ros2_ubuntu_aarch64_22.04_jazzy.sh  wheel_tick_verification.py
utils/pca9685_driver/src/: pca_driver.cpp
