<?xml version="1.0"?>
<package format="3">
  <name>mpu9250_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver node for MPU9250 IMU sensor</description>

  <maintainer email="rugved42@gmail.com">Rugved</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>my_robot_msgs</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>